--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 				</head>
 				<body>
 				
-				<div class='index-body'><div><a href="blog/style.html">style</a></div><div><a href="blog/test.html">test</a></div><div><a href="blog/如何构建一个博客系统.html">如何构建一个博客系统</a></div><div><a href="blog/这是一个测试.html">这是一个测试</a></div><div><a href="blog/helloword.html">helloword</a></div></div>
+				<div class='index-body'><div><a href="blog/同样是电饭锅水电费.html">同样是电饭锅水电费</a></div></div>
 				</body>
 				</html>
 			
