--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 				</head>
 				<body>
 				
-				<div class='index-body'><div><a href="blog/同样是电饭锅水电费.html">同样是电饭锅水电费</a></div></div>
+				<div class="index-banner" style="background-color: #F05F57;background-image: linear-gradient(120deg, #F05F57 , #360940);"></div>
+				<div class='index-body'><div class="list-item"><a href="blog/这是一个markdown.html">这是一个markdown</a></div><div class="list-item"><a href="blog/放松放松.html">放松放松</a></div><div class="list-item"><a href="blog/同样是电饭锅水电费.html">同样是电饭锅水电费</a></div></div>
 				</body>
 				</html>
 			
