--- a/index.html
+++ b/index.html
@@ -5,13 +5,21 @@
 					<meta charset="UTF-8">
 					<meta name="viewport" content="width=device-width, initial-scale=1.0">
 					<meta http-equiv="X-UA-Compatible" content="ie=edge">
-					<title></title>
-					<link rel="stylesheet" href="../markdown.css">
+					<title>{}</title>
+					<link rel="stylesheet" href="../theme.css">
 				</head>
 				<body>
 				
-				<div class="index-banner" style="background-color: #F05F57;background-image: linear-gradient(120deg, #F05F57 , #360940);"></div>
-				<div class='index-body'><div class="list-item"><a href="blog/这是一个markdown.html">这是一个markdown</a></div><div class="list-item"><a href="blog/放松放松.html">放松放松</a></div><div class="list-item"><a href="blog/同样是电饭锅水电费.html">同样是电饭锅水电费</a></div></div>
+				<div class="index-banner" style="background-color: #F05F57;background-image: linear-gradient(120deg, #F05F57 , #360940);">
+				<div class="page-header">
+					<div>
+						<image src="https://avatars0.githubusercontent.com/u/6204210?s=460&v=4" />
+						<h2>leinov</h2>
+					</div>
+					<a href="https://github.com/leinov/somb" class="btn">leinov GitHub</a>
+				</div>
+				</div>
+				<div class='index-body'><div class="list-item"><a href="blog/这是一个markdown.html">这是一个markdown</a></div><div class="list-item"><a href="blog/优秀网站汇总.html">优秀网站汇总</a></div></div>
 				</body>
 				</html>
 			
