--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 									<image src="https://avatars0.githubusercontent.com/u/6204210?s=460&v=4" />
 									<h2>leinov</h2>
 								</div>
-								<a href="https://github.com/leinov/somb" class="btn">leinov GitHub</a>
+								<a href="https://github.com/leinov/wnow" class="btn">leinov GitHub</a>
 							</div>
 						</div>
 						<div class='index-body'><div class="list-item"><a href="blog/这是一个markdown.html">这是一个markdown</a></div><div class="list-item"><a href="blog/优秀网站汇总.html">优秀网站汇总</a></div></div>
